fix wall overflow issue

--- a/app/styles/wall.styl
+++ b/app/styles/wall.styl
@@ -1,8 +1,10 @@
 @import 'nib'
 @import '_config'
 
+.wall
+  overflow: visible !important
+
 .wall ul
-  overflow: visible
   height: 100%
   width: 0
   padding: 0
